--- a/responsive.css
+++ b/responsive.css
@@ -1,6 +1,578 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+@media screen and (min-width:300px) and (max-width:576px) {
+    header{
+        width: 100%;
+        height: 100vh;
+    }
+    nav{
+        padding: 20px 40px;
+    }
+    .logo h2{
+        font-size: 30px;
+    }
+    .nav-items ul li{
+        display: none;
+    }
+    .nav-items ul .log{
+        display: block;
+    }
+    /* banner section responsive code start */
+    .banner{
+        color: #fffffff5;
+        margin: 80px auto;
+        width: 80%;
+        text-align: center;
+     }
+    .banner h1{
+        font-size: 28px;
+    }
+    .banner p{
+        font-size: 14px;
+        line-height: 1.3;
+        padding-top: 25px;
+    }
+    .banner-btn{
+        font-size: 13px;
+        margin-top: 16px;
+        padding: 10px 18px;
+        font-weight: 500;
+    }
+    /* first section responsive code start */
+    .service-parent{
+        grid-template-columns: repeat(1,1fr);
+        justify-content: center;
+        text-align: center;
+        width: 80%;
+        gap: 30px;
+    }
+    .service-card{
+        width: 100%;
+        padding: 20px;
+    }
+    .service-card i{
+        font-size: 16px;
+        padding: 10px;
+    }
+    .service-card h2{
+        font-size: 22px;
+        padding: 14px 0;
+    }
+    .service-card p{
+        font-size: 13px;
+        line-height: 1.3;
+    }
+    .service-card a{
+        font-size: 15px;
+        font-weight: 600;
+        color: #c78605;
+        padding: 12px 0;
+    }
+    /* second section responsive code start */
+    .hot-sales-parent{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        width: 80%;
+        margin: 0 auto;
+        gap: 40px;
+    }
+    .hot-sales-img img{
+        width: 100%;
+        height: 200px;
+        transition: 0.5s;
+    }
+    .hot-sales-text{
+        width: 90%;
+    }
+    .hot-sales-text h2{
+        font-size: 20px;
+    }
+    .hot-sales-text p{
+        font-size: 12px;
+    }
+    .sales-price{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 30px;
+        padding: 20px 0;
+    }
+    .sales-price h3{
+        font-size: 18px;
+    }
+    .sales-price h5 i{
+        font-size: 14px;
+    }
+    .sales-price h5{
+        font-size: 13px;
+    }
+    .hot-sales-button{
+        padding: 8px 20px;
+        font-size: 13px;
+    }
+    /* about section responsive code start */
+    .about-parent{
+        display: block;
+        justify-content: center;
+        align-items: center;
+        width: 80%;
+        margin: 0 auto;
+        text-align: center;
+    }
+    .about-text{
+        width: 100%;
+    }
+    .about-text h2{
+        font-size: 28px;
+        font-weight: 700;
+    }
+    .about-text p{
+        padding: 18px 0 30px 0;
+        font-size: 15px;
+        color: rgb(58, 57, 57);
+        line-height: 1.5;
+    }
+    .about-button{
+        padding: 10px 20px;
+        font-size: 14px;
+        margin-bottom: 20px;
+    }
+    .about-img img{
+        width: 100%;
+        height: 100%;
+    }
+}
+@media screen and (min-width:576px) and (max-width:768px) {
+    header{
+        width: 100%;
+        height: 100vh;
+    }
+    nav{
+        padding: 20px 40px;
+    }
+    .logo h2{
+        font-size: 30px;
+    }
+    .nav-items ul{
+        display: flex;
+        gap: 40px;
+    }
+    .nav-items ul li{
+        display: none;
+        font-size: 18px;
+    }
+    .nav-items ul .log{
+        display: block;
+    }
+    .nav-items ul .log-2{
+        display: block;
+    }
+      /* banner section responsive code start */
+      .banner{
+       
+        margin: 80px 0 0 40px;
+        width: 400px;
+        
+     }
+    .banner h1{
+        font-size: 35px;
+        line-height: 1.3;
+    }
+    .banner p{
+        font-size: 14px;
+        line-height: 1.8;
+        padding-top: 25px;
+    }
+    .banner-btn{
+        font-size: 13px;
+        margin-top: 30px;
+        padding: 10px 20px;
+        font-weight: 500;
+    }
+      /* first section responsive code start */
+      .service-parent{
+        grid-template-columns: repeat(1,1fr);
+        justify-content: center;
+        text-align: center;
+        width: 90%;
+        gap: 30px;
+    }
+    .service-card{
+        width: 100%;
+        padding: 20px;
+    }
+    .service-card i{
+        font-size: 16px;
+        padding: 10px;
+    }
+    .service-card h2{
+        font-size: 22px;
+        padding: 14px 0;
+    }
+    .service-card p{
+        font-size: 13px;
+        line-height: 1.3;
+    }
+    .service-card a{
+        font-size: 15px;
+        font-weight: 600;
+        color: #c78605;
+        padding: 12px 0;
+    }
+    /* second section responsive code start */
+    .hot-sales-parent{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        width: 90%;
+        margin: 0 auto;
+        gap: 40px;
+    }
+    .hot-sales-img img{
+        width: 100%;
+        height: 100%;
+        transition: 0.5s;
+    }
+    .hot-sales-text{
+        width: 90%;
+    }
+    .hot-sales-text h2{
+        font-size: 18px;
+    }
+    .hot-sales-text p{
+        font-size: 13px;
+    }
+    .sales-price{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 20%;
+        padding: 20px 0;
+    }
+    .sales-price h3{
+        font-size: 16px;
+    }
+    .sales-price h5 i{
+        font-size: 13px;
+    }
+    .sales-price h5{
+        font-size: 11px;
+    }
+    .hot-sales-button{
+        margin: 5px 0 25px 0;
+        padding: 8px 20px;
+        font-size: 12px;
+    }
+    /* about section responsive code start */
+    .about-parent{
+        display: block;
+        justify-content: center;
+        align-items: center;
+        width: 90%;
+        margin: 0 auto;
+        text-align: center;
+    }
+    .about-text{
+        width: 100%;
+    }
+    .about-text h2{
+        font-size: 30px;
+    }
+    .about-text p{
+        padding: 20px 0 30px 0;
+        font-size: 16px;
+    }
+    .about-button{
+        padding: 10px 20px;
+        font-size: 16px;
+        margin-bottom: 20px;
+    }
+    .about-img img{
+        width: 100%;
+        height: 100%;
+    }
+}
+@media screen and (min-width:769px) and (max-width:992px) {
+    header{
+        width: 100%;
+        height: 100vh;
+    }
+    nav{
+        padding: 20px 40px;
+    }
+    .logo h2{
+        font-size: 30px;
+    }
+    .nav-items ul{
+        display: flex;
+    }
+    .nav-items ul li{
+        display: none;
+        font-size: 18px;
+    }
+    .nav-items ul .log{
+        display: block;
+    }
+    .nav-items ul .log-2{
+        display: block;
+    }
+    .nav-items ul .log-3{
+        display: block;
+    }
+     /* banner section responsive code start */
+     .banner{
+       
+        margin: 60px 0 0 40px;
+        width: 400px;
+        
+     }
+    .banner h1{
+        font-size: 36px;
+        line-height: 1.3;
+    }
+    .banner p{
+        font-size: 14px;
+        line-height: 1.8;
+        padding-top: 25px;
+    }
+    .banner-btn{
+        font-size: 14px;
+        margin-top: 30px;
+        padding: 10px 20px;
+        font-weight: 500;
+    }
+      /* first section responsive code start */
+      .service-parent{
+        grid-template-columns: repeat(3,1fr);
+        justify-content: center;
+        text-align: center;
+        width: 90%;
+        gap: 30px;
+    }
+    .service-card{
+        width: 100%;
+        padding: 20px;
+    }
+    .service-card i{
+        font-size: 14px;
+        padding: 10px;
+    }
+    .service-card h2{
+        font-size: 20px;
+        padding: 14px 0;
+    }
+    .service-card p{
+        font-size: 11px;
+        line-height: 1.3;
+    }
+    .service-card a{
+        font-size: 15px;
+        font-weight: 600;
+        color: #c78605;
+        padding: 10px 0;
+    }
+     /* second section responsive code start */
+     .hot-sales-parent{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        width: 90%;
+        margin: 0 auto;
+        gap: 40px;
+    }
+    .hot-sales-img img{
+        width: 100%;
+        height: 140px;
+        transition: 0.5s;
+    }
+    .hot-sales-text{
+        width: 90%;
+    }
+    .hot-sales-text h2{
+        font-size: 18px;
+    }
+    .hot-sales-text p{
+        font-size: 12px;
+    }
+    .sales-price{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 15%;
+        padding: 20px 0;
+    }
+    .sales-price h3{
+        font-size: 16px;
+    }
+    .sales-price h5 i{
+        font-size: 13px;
+    }
+    .sales-price h5{
+        font-size: 11px;
+    }
+    .hot-sales-button{
+        margin: 5px 0 25px 0;
+        padding: 8px 20px;
+        font-size: 12px;
+    }
+    /* about section responsive code start */
+    .about-parent{
+        display: flex;
+        width: 90%;
+        margin: 0 auto;
+        gap: 40px;
+    }
+    .about-text{
+        width: 100%;
+    }
+    .about-text h2{
+        font-size: 25px;
+    }
+    .about-text p{
+        padding: 10px 0 20px 0;
+        font-size: 11px;
+    }
+    .about-button{
+        padding: 10px 20px;
+        font-size: 14px;
+        margin-bottom: 20px;
+    }
+    .about-img img{
+        width: 300px;
+        height: 200px;
+    }
+}
+@media screen and (min-width:993px) and (max-width:1200px) {
+    header{
+        width: 100%;
+        height: 100vh;
+    }
+    nav{
+        padding: 20px 50px;
+    }
+    .logo h2{
+        font-size: 35px;
+    }
+    .nav-items ul{
+        display: flex;
+    }
+    .nav-items ul li{
+        font-size: 18px;
+    }
+     /* banner section responsive code start */
+     .banner{
+        margin: 70px 0 0 50px;
+        width: 460px;
+        
+     }
+    .banner h1{
+        font-size: 43px;
+        line-height: ;
+    }
+    .banner p{
+        font-size: 16px;
+        line-height: 1.9;
+        padding-top: 25px;
+    }
+    .banner-btn{
+        font-size: 14px;
+        margin-top: 30px;
+        padding: 10px 20px;
+        font-weight: 500;
+    }
+     /* first section responsive code start */
+     .service-parent{
+        grid-template-columns: repeat(3,1fr);
+        justify-content: center;
+        text-align: center;
+        width: 90%;
+        gap: 40px;
+    }
+    .service-card{
+        width: 100%;
+        padding: 20px;
+    }
+    .service-card i{
+        font-size: 18px;
+        padding: 10px;
+    }
+    .service-card h2{
+        font-size: 24px;
+        padding: 14px 0;
+    }
+    .service-card p{
+        font-size: 14px;
+        line-height: 1.3;
+    }
+    .service-card a{
+        font-size: 15px;
+        font-weight: 600;
+        color: #c78605;
+        padding: 10px 0;
+    }
+     /* second section responsive code start */
+     .hot-sales-parent{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        width: 90%;
+        margin: 0 auto;
+        gap: 40px;
+    }
+    .hot-sales-img img{
+        width: 100%;
+        height: 220px;
+        transition: 0.5s;
+    }
+    .hot-sales-text{
+        width: 90%;
+    }
+    .hot-sales-text h2{
+        font-size: 22px;
+    }
+    .hot-sales-text p{
+        font-size: 14px;
+    }
+    .sales-price{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 15%;
+        padding: 20px 0;
+    }
+    .sales-price h3{
+        font-size: 22px;
+    }
+    .sales-price h5 i{
+        font-size: 16px;
+    }
+    .sales-price h5{
+        font-size: 16px;
+    }
+    .hot-sales-button{
+        margin: 10px 0 25px 0;
+        padding: 8px 20px;
+        font-size: 15px;
+    }
+      /* about section responsive code start */
+      .about-parent{
+        display: flex;
+        width: 90%;
+        margin: 0 auto;
+        gap: 20px;
+    }
+    .about-text{
+        width: 100%;
+    }
+    .about-text h2{
+        font-size: 30px;
+    }
+    .about-text p{
+        padding: 10px 0 20px 0;
+        font-size: 14px;
+    }
+    .about-button{
+        padding: 10px 20px;
+        font-size: 14px;
+        margin-bottom: 20px;
+    }
+    .about-img img{
+        width: 450px;
+        height: 300px;
+    }
 }
