food hub project is completed

--- a/style.css
+++ b/style.css
@@ -289,3 +289,202 @@ hr{
     width: 550px;
     height: 350px;
 }
+/* testomonials section code is start */
+
+.testomonial-sec{
+    padding: 60px 0; 
+    background-image: linear-gradient(rgba(0, 0, 0, 0.37),rgba(0, 0, 0, 0.37)),url(images/team-bg.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+}
+.testomonial-title{
+    text-align: center;
+    margin-bottom: 60px;
+}
+.testomonial-title h2{
+    color: #df9b15;
+    font-size: 35px;
+}
+.testomonial-title h5{
+    color: #ffffffda;
+    font-size: 16px;
+    padding: 10px 0;
+}
+.testomonials-parent{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    align-items: center;
+    width: 1170px;
+    margin: 0 auto;
+    gap: 40px;
+}
+.testomonial-items{
+    display: flex;
+    align-items: center;
+    color: black;
+    background-color: #ffffffa1;
+    padding: 5px;
+    gap: 15px;
+}
+.testomonial-img img{
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    border: 2px solid #b9810f;
+}
+.testomonial-text{
+   padding: 10px 0;
+}
+.testomonial-text h3{
+    font-size: 24px;
+    color: #b97c01;
+}
+.testomonial-text p{
+    font-size: 14px;
+    padding: 10px 0;
+    line-height: 1.5;
+}
+.testomonial-icon{
+    color: goldenrod;
+    font-size: 20px;
+}
+
+/* blog section code start */
+.blog-sec{
+    padding: 60px 0; 
+    background-image: linear-gradient(rgba(0, 0, 0, 0.144),rgba(0, 0, 0, 0.144));
+    width: 100%;
+}
+.blog-title{
+    text-align: center;
+    margin-bottom: 40px;
+}
+.blog-title h2{
+    font-size: 33px;
+}
+.blog-title span{
+    color: #df9b15;
+}
+.blog-parent{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    align-items: center;
+    width: 1170px;
+    margin: 0 auto;
+    gap: 30px;
+}
+.blog-items img{
+    width: 265px;
+    height: 210px;
+    border-radius: 5px;
+}
+/* footer section code start */
+.footer-container{
+    background:linear-gradient(to right,rgba(0, 0, 0, 0.925),rgba(0, 0, 0, 0.801));
+    padding: 60px 0;
+    width: 100%;
+}
+.footer-parent{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    color: #ffffffcb;
+    width: 1170px;
+    margin: 0 auto;
+    gap: 40px;
+}
+.footer-items-1 h2{
+    font-size: 35px;
+    padding: 10px 0 18px 0;
+}
+.footer-items-1 p{
+    font-size: 16px;
+    line-height: 1.5;
+}
+.footer-items-1 h4{
+    font-size: 20px;
+    padding: 14px 0;
+}
+.footer-items-1 i{
+    margin: 0 5px;
+    font-size: 20px;
+    cursor: pointer;
+    transition: 0.5s;
+}
+.footer-items-1 i:hover{
+    color: #df9b15;
+}
+.footer-items-2 h3{
+    padding: 10px 0 18px 0;
+    font-size: 22px;
+}
+.news-items{
+    display: flex;
+    align-items: center;
+    margin-bottom: 8px;
+    gap: 20px;
+}
+.news-img{
+    overflow: hidden;
+    align-items: center;
+}
+.news-img img{
+    width: 180px;
+    height: 70px;
+    transition: 0.5s; 
+}
+.news-img img:hover{
+    transform: scale(1.3);
+}
+.news-text h4{
+    font-size: 16px;
+}
+.news-text p{
+    font-size: 13px;
+    padding: 8px 0;
+}
+.footer-items-3 h3{
+    padding: 8px 0 16px 0;
+    font-size: 28px;
+}
+.footer-items-3 ul li{
+    list-style: none;
+    padding: 5px 0;
+    font-size: 17px;
+}
+.footer-items-3 ul li i{
+    margin-right: 8px;
+}
+.footer-items-4 h3{
+    padding: 8px 0 16px 0;
+    font-size: 28px;
+}
+.contact-items{
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+.contact-icon{
+    font-size: 15px;
+    background-color: #0984e3;
+    padding: 8px;
+    border-radius: 50%;
+    margin-right: 9px;
+}
+.contact-text h4{
+    font-size: 18px;
+}
+.contact-text h5{
+    font-size: 12px;
+}
+.copy p{
+    background-color: black;
+    color: #fff;
+    padding: 10px 0;
+    text-align: center;
+    font-size: 14px;
+}
+.copy span{
+    color: red;
+}
