--- a/responsive.css
+++ b/responsive.css
@@ -139,6 +139,53 @@
         width: 100%;
         height: 100%;
     }
+    /* testomonials section responsive code is start */
+    .testomonials-parent{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        align-items: center;
+        width: 80%;
+        margin: 0 auto;
+        gap: 30px;
+    }
+
+    .testomonial-img img{
+        width: 100%;
+        height: 100%;
+    }  
+    .testomonial-text h3{
+        font-size: 20px;
+    }
+    .testomonial-text p{
+        font-size: 11px;
+        padding: 6px 0;
+        line-height: 1.5;
+    }
+    .testomonial-icon{
+        font-size: 10px;
+    }
+    /* blog section code start */
+    .blog-parent{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        align-items: center;
+        width: 80%;
+        margin: 0 auto;
+        gap: 30px;
+    }
+    .blog-items img{
+        width: 100%;
+        height: 100%;
+    }
+/* footer section responsive code start */
+.footer-parent{
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+    color: #ffffffcb;
+    width: 80%;
+    margin: 0 auto;
+    gap: 40px;
+}
 }
 @media screen and (min-width:576px) and (max-width:768px) {
     header{
@@ -288,6 +335,58 @@
         width: 100%;
         height: 100%;
     }
+ /* testomonials section responsive code is start */
+
+    .testomonials-parent{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        align-items: center;
+        width: 90%;
+        margin: 0 auto;
+        gap: 30px;
+    }
+
+    .testomonial-img img{
+        width: 100%;
+        height: 100%;
+    }  
+    .testomonial-text h3{
+        font-size: 22px;
+    }
+    .testomonial-text p{
+        font-size: 14px;
+        padding: 6px 0;
+        line-height: 1.5;
+    }
+    .testomonial-icon{
+        font-size: 15px;
+    }
+/* blog section code start */
+.blog-parent{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    align-items: center;
+    width: 90%;
+    margin: 0 auto;
+    gap: 30px;
+}
+.blog-items img{
+    width: 100%;
+    height: 100%;
+}
+/* footer section responsive code start */
+.footer-parent{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    color: #ffffffcb;
+    width: 90%;
+    margin: 0 auto;
+    gap: 20px;
+}
+.footer-items-1 p{
+    font-size: 16px;
+    line-height: 1.5;
+}
 }
 @media screen and (min-width:769px) and (max-width:992px) {
     header{
@@ -437,6 +536,61 @@
         width: 300px;
         height: 200px;
     }
+     /* testomonials section responsive code is start */
+
+     .testomonials-parent{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        align-items: center;
+        width: 90%;
+        margin: 0 auto;
+        gap: 30px;
+    }
+
+    .testomonial-img img{
+        width: 100%;
+        height: 100%;
+    }  
+    .testomonial-text h3{
+        font-size: 20px;
+    }
+    .testomonial-text p{
+        font-size: 13px;
+        padding: 6px 0;
+        line-height: 1.5;
+    }
+    .testomonial-icon{
+        font-size: 13px;
+    }
+    /* blog section code start */
+    .blog-parent{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        align-items: center;
+        width: 90%;
+        margin: 0 auto;
+        gap: 30px;
+    }
+    .blog-items img{
+        width: 100%;
+        height: 100%;
+    }
+    /* footer section responsive code start */
+.footer-parent{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    color: #ffffffcb;
+    width: 90%;
+    margin: 0 auto;
+    gap: 30px;
+}
+.footer-items-1 h2{
+    font-size: 30px;
+    padding: 10px 0 18px 0;
+}
+.footer-items-1 p{
+    font-size: 16px;
+}
 }
 @media screen and (min-width:993px) and (max-width:1200px) {
     header{
@@ -575,4 +729,82 @@
         width: 450px;
         height: 300px;
     }
+     /* testomonials section responsive code is start */
+
+     .testomonials-parent{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        align-items: center;
+        width: 90%;
+        margin: 0 auto;
+        gap: 30px;
+    }
+
+    .testomonial-img img{
+        width: 100%;
+        height: 100%;
+    }  
+    .testomonial-text h3{
+        font-size: 20px;
+    }
+    .testomonial-text p{
+        font-size: 13px;
+        padding: 6px 0;
+        line-height: 1.5;
+    }
+    .testomonial-icon{
+        font-size: 14px;
+    }
+    /* blog section code start */
+    .blog-parent{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        align-items: center;
+        width: 90%;
+        margin: 0 auto;
+        gap: 30px;
+    }
+    .blog-items img{
+        width: 100%;
+        height: 100%;
+    }
+    /* footer section responsive code start */
+.footer-parent{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    color: #ffffffcb;
+    width: 90%;
+    margin: 0 auto;
+    gap: 20px;
+}
+.footer-items-1 h2{
+    font-size: 26px;
+    padding: 10px 0;
+}
+.footer-items-1 p{
+    font-size: 14px;
+    line-height: 1.5;
+}
+.footer-items-2 h3{
+    padding: 10px 0 18px 0;
+    font-size: 20px;
+}
+.news-img img{
+    width: 170px;
+    height: 60px;
+    transition: 0.5s; 
+}
+.news-text p{
+    font-size: 11px;
+    padding: 8px 0;
+}
+.footer-items-3 ul li{
+    font-size: 15px;
+}
+.contact-text h4{
+    font-size: 16px;
+}
+.contact-text h5{
+    font-size: 10px;
+}
 }
